k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: game-2048
spec:
  selector:
    app: game-2048
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
